--- a/templates/biological_data/new.html.twig
+++ b/templates/biological_data/new.html.twig
@@ -15,4 +15,10 @@
     {{ form_end(form) }}
 
     <a href="{{ path('app_biological_data_index') }}">back to list</a>
+
+
+     <!-- Bouton Back to your dashboard -->
+    <div class="container mt-3">
+        <a href="{{ path('app_health_professional_doctor_dashboard') }}" class="btn btn-secondary">Back to your dashboard</a>
+    </div>
 {% endblock %}
